# demo-server

./: README.md  pyproject.toml
docs/: syntax-guide.md
pages/bingo-offline-tutorial/: 1-overview.html  2-pipeline.html  3-modules.html  4-geo-entity.html  5-datasets.html  6-operations.html  _template.html
pages/datazilla-presents/: index.html
pages/m2g-tutorial/: index.html
pages/mock-interview-retro/: index.html
pages/test-20260418-ai-safety-stage2/: index.md
pages/test-markdown/: index.md
src/demo_server/: cli.py  daemon.py  markdown_render.py  server.py
src/demo_server/themes/github/: template.html
src/demo_server/themes/meridian-lite/: template.html
src/demo_server/themes/minimal/: template.html
